create BedBomb.java - explodes beds near targets and has compatibility with other modules such as AutoTrap.java
update StealthMine.java & autoCity.java
- fixed issue where StealthMine.java would not break the  block even though it is breaking the block

did some other stuff to other modules